// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeavePeriodIntermittent renders the page with bonding leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <Trans
        components={
          Object {
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsLeavePeriodIntermittent.hasLeaveHint"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    }
    label="Do you need to take off work in uneven blocks of time (intermittent leave)?"
    name="has_intermittent_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.intermittent_leave_periods",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Alert
      autoWidth={true}
      state="warning"
    >
      You have to create a separate application for intermittent leave.
    </Alert>
  </ConditionalContent>
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.intermittent_leave_periods",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your intermittent leave.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodIntermittent.datesLead"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    </Lead>
    <div
      className="measure-6"
    >
      <Details
        label="Do you work in an acute care hospital or the teaching hospital of the University of Massachusetts Medical School?"
      >
        <Trans
          components={
            Object {
              "emergency-bonding-regs-worker-link": <a
                href="https://www.mass.gov/pfml-acute-claimant"
                rel="noopener"
                target="_blank"
              />,
            }
          }
          i18nKey="pages.claimsLeavePeriodIntermittent.bondingRegsDetailsSummary"
        />
      </Details>
    </div>
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.intermittent_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="Last day of leave"
      monthLabel="Month"
      name="leave_details.intermittent_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodIntermittent renders the page with bonding leave content 2`] = `
Array [
  "If you have already taken some or all of your family leave in 2021, tell us the first day you missed work this year, and the last day you expect to be on leave.",
  <br
    key="br-1"
  />,
  <br
    key="br-2"
  />,
  "Your paid leave must end before the child’s first birthday or the one year anniversary of when they arrived in your home (for foster care and adoption).",
]
`;

exports[`LeavePeriodIntermittent renders the page with bonding leave content 3`] = `
Array [
  "If you had a child join your family in 2020, you may be eligible for paid leave anytime in 2021. ",
  <a
    href="https://www.mass.gov/pfml-acute-claimant"
    key="1"
    rel="noopener"
    target="_blank"
  >
    Learn more about emergency Covid-19 regulations for hospital workers.
  </a>,
]
`;

exports[`LeavePeriodIntermittent renders the page with medical leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    neutral={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "caregiver-certification-form-link": <a
            href="https://www.mass.gov/family-caring-form"
            rel="noopener"
            target="_blank"
          />,
          "healthcare-provider-form-link": <a
            href="https://www.mass.gov/medical-leave-form"
            rel="noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsLeavePeriodIntermittent.needDocumentAlert"
      tOptions={
        Object {
          "context": "medical",
        }
      }
    />
  </Alert>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <Trans
        components={
          Object {
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsLeavePeriodIntermittent.hasLeaveHint"
        tOptions={
          Object {
            "context": "medical",
          }
        }
      />
    }
    label="Do you need to take off work in uneven blocks of time (intermittent leave)?"
    name="has_intermittent_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.intermittent_leave_periods",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Alert
      autoWidth={true}
      state="warning"
    >
      You have to create a separate application for intermittent leave.
    </Alert>
  </ConditionalContent>
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.intermittent_leave_periods",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your intermittent leave.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodIntermittent.datesLead"
        tOptions={
          Object {
            "context": "medical",
          }
        }
      />
    </Lead>
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.intermittent_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="Last day of leave or re‑evaluation date"
      monthLabel="Month"
      name="leave_details.intermittent_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodIntermittent renders the page with medical leave content 2`] = `
Array [
  "You will need a completed ",
  <a
    href="https://www.mass.gov/medical-leave-form"
    key="1"
    rel="noopener"
    target="_blank"
  >
    Certification of Your Serious Health Condition
  </a>,
  " for this section.",
]
`;

exports[`LeavePeriodIntermittent renders the page with medical leave content 3`] = `
Array [
  "If you have already taken leave for this condition in 2021, tell us the first day you missed work this year, and the last day you expect to be on leave.",
  <br
    key="br-1"
  />,
  <br
    key="br-2"
  />,
  "Your answer must match the intermittent leave start and end dates in the Certification of Your Serious Health Condition.",
]
`;
